tests/snapshots/tests_parser_test__basic.snap
---
source: tests/tests-parser-test.rs
expression: generate_output(diags)
---
./test-data/ParserTest.sol:8:3
error IParserTest.SimpleError
  @param _param1 is missing
  @param _param2 is missing

./test-data/ParserTest.sol:11:3
event IParserTest.SimpleEvent
  @param _param1 is missing
  @param _param2 is missing

./test-data/ParserTest.sol:47:3
function IParserTest.SOME_CONSTANT
  @return _returned is missing

./test-data/ParserTest.sol:120:3
struct ParserTestFunny.SimpleStruct
  @notice is missing

./test-data/ParserTest.sol:128:3
modifier ParserTestFunny.someModifier
  @notice is missing

./test-data/ParserTest.sol:136:3
variable ParserTestFunny.SOME_CONSTANT
  @notice is missing
  @return is missing

./test-data/ParserTest.sol:144:3
function ParserTestFunny.viewFunctionWithParams
  @notice is missing
  @param _param1 is missing
  @param _param2 is missing
  @return missing for unnamed return #1

./test-data/ParserTest.sol:149:3
function ParserTestFunny._viewInternal
  @notice is missing
  @return missing for unnamed return #1

./test-data/ParserTest.sol:181:3
function ParserTestFunny._viewInternal
  @notice is missing
  @param _paramName is missing
