tests/snapshots/tests_parser_test__contract.snap
---
source: tests/tests-parser-test.rs
expression: "snapshot_content(\"./test-data/ParserTest.sol\",\n&ValidationOptions::builder().inheritdoc(false).contracts(ContractRules::builder().title(Req::Required).author(Req::Required).notice(Req::Required).build()).build(),\ntrue,)"
---
./test-data/ParserTest.sol:8:3
error IParserTest.SimpleError
  @param _param1 is missing
  @param _param2 is missing

./test-data/ParserTest.sol:11:3
event IParserTest.SimpleEvent
  @param _param1 is missing
  @param _param2 is missing

./test-data/ParserTest.sol:47:3
function IParserTest.SOME_CONSTANT
  @return _returned is missing

./test-data/ParserTest.sol:51:1
contract ParserTest
  @title is missing
  @author is missing

./test-data/ParserTest.sol:119:1
contract ParserTestFunny
  @title is missing
  @author is missing
  @notice is missing

./test-data/ParserTest.sol:121:3
struct ParserTestFunny.SimpleStruct
  @notice is missing

./test-data/ParserTest.sol:128:3
modifier ParserTestFunny.someModifier
  @notice is missing

./test-data/ParserTest.sol:137:3
variable ParserTestFunny.SOME_CONSTANT
  @notice is missing
  @return is missing

./test-data/ParserTest.sol:145:3
function ParserTestFunny.viewFunctionWithParams
  @notice is missing
  @param _param1 is missing
  @param _param2 is missing
  @return missing for unnamed return #1

./test-data/ParserTest.sol:150:3
function ParserTestFunny._viewInternal
  @notice is missing
  @return missing for unnamed return #1

./test-data/ParserTest.sol:183:3
function ParserTestFunny._viewInternal
  @notice is missing
  @param _paramName is missing
  @return _returned is missing

./test-data/ParserTest.sol:190:3
function ParserTestFunny._viewBlockLinterFail
  @notice is missing
