tests/snapshots/tests_parser_test__enum.snap
---
source: tests/tests-parser-test.rs
expression: generate_output(diags)
---
./test-data/ParserTest.sol:8:1
error IParserTest.SimpleError
  @param _param1 is missing
  @param _param2 is missing

./test-data/ParserTest.sol:10:1
event IParserTest.SimpleEvent
  @param _param1 is missing
  @param _param2 is missing

./test-data/ParserTest.sol:13:1
enum IParserTest.SimpleEnum
  @param A is missing
  @param B is missing
  @param C is missing

./test-data/ParserTest.sol:48:3
function IParserTest.SOME_CONSTANT
  @return _returned is missing

./test-data/ParserTest.sol:145:3
function ParserTestFunny.viewFunctionWithParams
  missing NatSpec

./test-data/ParserTest.sol:150:3
function ParserTestFunny._viewInternal
  missing NatSpec

./test-data/ParserTest.sol:184:3
function ParserTestFunny._viewInternal
  @param _paramName is missing
