tests/snapshots/tests_parser_test__struct.snap
---
source: tests/tests-parser-test.rs
expression: generate_output(diags)
---
./test-data/ParserTest.sol:8:1
error IParserTest.SimpleError
  @param _param1 is missing
  @param _param2 is missing

./test-data/ParserTest.sol:10:1
event IParserTest.SimpleEvent
  @param _param1 is missing
  @param _param2 is missing

./test-data/ParserTest.sol:48:3
function IParserTest.SOME_CONSTANT
  @return _returned is missing

./test-data/ParserTest.sol:120:1
struct ParserTestFunny.SimpleStruct
  @notice is missing
  @param a is missing
  @param b is missing

./test-data/ParserTest.sol:128:12
modifier ParserTestFunny.someModifier
  @notice is missing

./test-data/ParserTest.sol:135:1
variable ParserTestFunny.SOME_CONSTANT
  @notice is missing
  @return is missing

./test-data/ParserTest.sol:145:3
function ParserTestFunny.viewFunctionWithParams
  @notice is missing
  @param _param1 is missing
  @param _param2 is missing
  @return missing for unnamed return #1

./test-data/ParserTest.sol:150:3
function ParserTestFunny._viewInternal
  @notice is missing
  @return missing for unnamed return #1

./test-data/ParserTest.sol:184:3
function ParserTestFunny._viewInternal
  @notice is missing
  @param _paramName is missing
